<!--
  ~ Copyright (c) 2018-2020 : NewBugger (https://github.com/NewBugger)
  ~
  ~ This is free software; you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation; either version 3 of the License, or
  ~ (at your option) any later version.
  -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <PreferenceCategory android:title="@string/settings_header">

        <SwitchPreference
            android:key="saf"
            android:defaultValue="true"
            android:title="@string/saf_title"
            android:summaryOn="@string/saf_summary_on"
            android:summaryOff="@string/saf_summary_off"/>

        <SwitchPreference
            android:key="setPixel"
            android:defaultValue="true"
            android:title="@string/pixel_title"
            android:summaryOn="@string/pixel_summary_on"
            android:summaryOff="@string/pixel_summary_off" />

        <EditTextPreference
            android:key="delay"
            android:defaultValue="1000"
            android:title="@string/delay_title"
            android:singleLine="true"
            android:dialogTitle="@string/delay_tip"
            android:summary="@string/delay_summary"/>

    </PreferenceCategory>

</PreferenceScreen>